Refactor test method names in CategoryServiceTest and WalletServiceTest for consistency